[workspace]
resolver = "2"
members = [

    "examples/socketcan_node",
    "integration_tests",
    "zencan-build",
    "zencan-cli",
    "zencan-client",
    "zencan-common",
    "zencan-eds",
    "zencan-macro",
    "zencan-node",
]


# Defaults for all crates to share
[workspace.package]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/mcbridejc/zencan"

[workspace.dependencies]
# Local
zencan-build = { path = "zencan-build", version = "0.0.3" }
zencan-client = { path = "zencan-client", version = "0.0.3" }
zencan-common = { path = "zencan-common", version = "0.0.3", default-features = false }
zencan-macro = { path = "zencan-macro", version = "0.0.1" }
zencan-node = { path = "zencan-node", version = "0.0.3" }

# External
crc16 = "0.4.0"
critical-section = { version = "1.2.0", default-features = false }
defmt = "1.0.1"
defmt-or-log = { version = "0.2.1", default-features = false }
embedded-io = { version = "0.6.1" }
futures = { version = "0.3.31", default-features = false, features = [
    "async-await",
] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
snafu = { version = "0.8.5", default-features = false }
socketcan = { version = "3.5.0", features = ["tokio"] }
toml = "0.8.20"
